feat: add the 'New Language Server' menu on explorer right-click
Signed-off-by: Fred Bricon <fbricon@gmail.com>